# hospital-waf-mcp

./: .gitignore  Dockerfile  Dockerfile.mcp  LICENSE  MODELCARD.md  README-MCP.md  README.md  README.zh-CN.md  app.py  deploy.sh  docker-compose.yml  knowledge_base_manager.py  knowledge_base_routes.py  mcp.json  mcp_config.json  modelscope.yaml  pyproject.toml  requirements-mcp.txt  requirements.txt  version.py
knowledge-base/: waf_rules.json
knowledge-base/active/: active_rules.json  manifest.json
knowledge-base/core/: core_rules.json  metadata.json
knowledge-base/modules/hospital-basic/: metadata.json  module.json  rules.json
mcp-examples/: cursor-stdio.json  modelscope-sse-legacy.json  modelscope-streamable-http.json
rules/: waf_rules.mcp.json
scripts/: build_mcp_rules.py  run_functional_tests.py  validate_rules.py
src/waf_mcp/: __main__.py  waf_engine.py
waf_mcp/: __init__.py  config.py  server.py
waf_mcp/rules/: hospital_supplement.json
web/templates/: attacks.html  audit.html  blacklist.html  change-password.html  dashboard.html  knowledge-base.html  login.html  rules.html  users.html
